added a hidden colosseum block that the player will teleport to when the fight starts

--- a/src/main/resources/assets/mc_colosseum/lang/en_us.json
+++ b/src/main/resources/assets/mc_colosseum/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "block.mc_colosseum.colosseum_button": "Colosseum Button"
+  "block.mc_colosseum.colosseum_button": "Colosseum Button",
+  "block.mc_colosseum.colosseum_stripped_oak_wood": "Colosseum Stripped Oak Wood"
 }
