--- a/src/main/resources/assets/mccolosseum/lang/en_us.json
+++ b/src/main/resources/assets/mccolosseum/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.mccolosseum.colosseum_button": "Colosseum Button",
   "block.mccolosseum.colosseum_stripped_oak_wood": "Colosseum Stripped Oak Wood",
+  "block.mccolosseum.colosseum_stripped_oak_wood_enemy": "Colosseum Stripped Oak Wood Enemy",
   "entity.mccolosseum.weakwarrior": "Weak Warrior"
 }
