added stabby mcstabby and made him spawn in at round two

--- a/src/main/resources/assets/mccolosseum/lang/en_us.json
+++ b/src/main/resources/assets/mccolosseum/lang/en_us.json
@@ -2,5 +2,6 @@
   "block.mccolosseum.colosseum_button": "Colosseum Button",
   "block.mccolosseum.colosseum_stripped_oak_wood": "Colosseum Stripped Oak Wood",
   "block.mccolosseum.colosseum_stripped_oak_wood_enemy": "Colosseum Stripped Oak Wood Enemy",
-  "entity.mccolosseum.weakwarrior": "Weak Warrior"
+  "entity.mccolosseum.weakwarrior": "Weak Warrior",
+  "entity.mccolosseum.stabbymcstabby": "Stabby Mcstabby"
 }
