--- a/src/main/resources/assets/mccolosseum/lang/en_us.json
+++ b/src/main/resources/assets/mccolosseum/lang/en_us.json
@@ -3,5 +3,6 @@
   "block.mccolosseum.colosseum_stripped_oak_wood": "Colosseum Stripped Oak Wood",
   "block.mccolosseum.colosseum_stripped_oak_wood_enemy": "Colosseum Stripped Oak Wood Enemy",
   "entity.mccolosseum.weakwarrior": "Weak Warrior",
-  "entity.mccolosseum.stabbymcstabby": "Stabby Mcstabby"
+  "entity.mccolosseum.stabbymcstabby": "Stabby Mcstabby",
+  "entity.mccolosseum.hammer_lover9000": "Hammer Lover9000"
 }
